Вместе с ИИ сделали BruteForce и ProgressBar